--- a/starter/cloudstorage/src/main/resources/application.properties
+++ b/starter/cloudstorage/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# Configure maximum file upload size
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
+server.servlet.session.timeout=1m
